@@ -4,6 +4,7 @@
 
 === 1.0.17 ===
 * Fixed frequency inspection bug for LeftRight and MidSide versions of plugin.
+* Added Bandpass, Ladder-pass and Ladder-rej filters.
 
 === 1.0.16 ===
 * Updated build scripts and dependencies.
